# ppr

./: CMakeLists.txt  CppProperties.json  percentile_finder.sln
percentile_finder/: default_config.h  filereader.cpp  number_masker.cpp  number_masker.h  number_masker_serial.cpp  percentile_finder.aps  percentile_finder.cpp  percentile_finder.vcxproj  percentile_finder.vcxproj.filters  percentile_finder.vcxproj.xml  resolver.cpp  resolver.h  resolver_parallel.cpp  resolver_parallel.h  resolver_serial.cpp  resolver_serial.h  resource.h  runner.cpp  watchdog.cpp  watchdog.h
percentile_finder/Debug/: percentile_finder.exe.recipe  percentile_finder.ilk  vc142.idb
percentile_finder/Debug/percenti.1bd23eb9.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  percentile_finder.lastbuildstate
percentile_finder/x64/Debug/: CodeAnalysisResultManifest.txt  percentile_finder.exe.recipe  percentile_finder.ilk  percentile_finder.obj.enc  vc142.idb
percentile_finder/x64/Debug/percenti.1bd23eb9.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  percentile_finder.lastbuildstate
percentile_finder/x64/Debug/percenti.cfef046d.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  percentile_finder.lastbuildstate  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
percentile_finder_test/: percentile_finder_test.cpp  percentile_finder_test.vcxproj  percentile_finder_test.vcxproj.filters
percentile_finder_test/x64/Debug/: percentile_finder_test.dll.recipe  percentile_finder_test.ilk  vc142.idb
percentile_finder_test/x64/Debug/percenti.CF302614.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  percentile_finder_test.lastbuildstate  percentile_finder_test.write.1u.tlog
src/: bit_masker.h  default_config.h  file_reader.cpp  filereader.h  number_masker_serial.cpp  open_cl_default_header.h  percentile_finder.cpp  resolver.cpp  resolver.h  resolver_opencl.cpp  resolver_opencl.h  resolver_parallel.cpp  resolver_parallel.h  resolver_serial.cpp  resolver_serial.h  utils.cpp  watchdog.cpp  watchdog.h
tst/: test.tst
x64/Debug/: percentile_finder_test.exp
